kube/gpu.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pytorch-pod

spec:
  containers:
    - name: pytorch-pod
      image: pytorch/pytorch
      imagePullPolicy: IfNotPresent
      command: ["bin/bash"]
      resources:
        limits:
          memory: 12Gi
          cpu: 2
          nvidia.com/gpu: 1
        requests:
          memory: 12Gi
          cpu: 2
          nvidia.com/gpu: 1


  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: nvidia.com/gpu.product
                operator: In
                values:
                  - NVIDIA-A100-SXM4-80GB
                  - Tesla-T4
