kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rollingout
spec:
  selector:
    app: rollingout
  ports:
  - port: 8080
    targetPort: 8080
